// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_EuiPageInner component is rendered 1`] = `
<main
  class="css-nq554q-euiPageInner"
/>
`;

exports[`_EuiPageInner is rendered 1`] = `
<div
  aria-label="aria-label"
  class="testClass1 testClass2 css-nq554q-euiPageInner"
  data-test-subj="test subject string"
/>
`;

exports[`_EuiPageInner paddingSize l is rendered 1`] = `
<div
  class="css-1can1uw-euiPageInner-l"
/>
`;

exports[`_EuiPageInner paddingSize m is rendered 1`] = `
<div
  class="css-1fbw59e-euiPageInner-m"
/>
`;

exports[`_EuiPageInner paddingSize none is rendered 1`] = `
<div
  class="css-nq554q-euiPageInner"
/>
`;

exports[`_EuiPageInner paddingSize s is rendered 1`] = `
<div
  class="css-1rasddw-euiPageInner-s"
/>
`;

exports[`_EuiPageInner paddingSize xl is rendered 1`] = `
<div
  class="css-1r56j2k-euiPageInner-xl"
/>
`;

exports[`_EuiPageInner paddingSize xs is rendered 1`] = `
<div
  class="css-1rijhyj-euiPageInner-xs"
/>
`;

exports[`_EuiPageInner panelled is rendered 1`] = `
<div
  class="css-20xep6-euiPageInner-panelled"
/>
`;
